-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.5.0 Beta2
-
None
-
66bc00196 (dev), 4e61da2a0 (6.5)
Take the following code:
import QtQuick import QtQuick.Window Window { width: 640 height: 480 visible: true title: qsTr("Hello World") property var test: null property bool isOk: test == undefined property bool isOk2: null == undefined Component.onCompleted: { console.debug("isOK: " + isOk + ", isOk2: " + isOk2) } }
When run directly, this outputs:
qml: isOK: true, isOk2: true
However, if you add CONFIG += qtquickcompiler to the application .pro file, then it outputs:
qml: isOK: false, isOk2: true
This appears to be a regression since Qt 6.4, and is the cause of QTBUG-110745.
- is required for
-
QTBUG-110745 GraphicalEffects completely broke in the last beta
-
- Closed
-
| For Gerrit Dashboard: QTBUG-110769 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 457225,4 | qmlcachegen: fix nonstrict equality code generation | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 457488,2 | qmlcachegen: fix nonstrict equality code generation | 6.5 | qt/qtdeclarative | Status: MERGED | +2 | 0 |